update for charts

--- a/src/Finance.Web/Views/Home/Index.cshtml
+++ b/src/Finance.Web/Views/Home/Index.cshtml
@@ -1,168 +1,147 @@
 ﻿@{
 
 }
+<div id="v-dashboard">
+    <div class="level">
+        <div class="level-left">
+            <div class="level-item">
+                <div class="title">Summary</div>
+            </div>
+        </div>
+        <div class="level-right">
+            <div class="level-item">
+                <p>
+                    Today: {{ today }}
+                </p>
+            </div>
+        </div>
+    </div>
 
-<div class="level">
-    <div class="level-left">
-    <div class="level-item">
-        <div class="title">Dashboard</div>
+    <div class="columns is-multiline">
+        <div class="column">
+            <div class="box notification is-primary">
+                <div class="heading">Income (This Month)</div>
+                <div class="title">{{ incomeThisMonth }}</div>
+                <div class="level">
+                    <div class="level-item">
+                        <div class="">
+                            <div class="heading">Top Category</div>
+                            <div class="title is-5">N/A</div>
+                        </div>
+                    </div>
+                    <div class="level-item">
+                        <div class="">
+                            <div class="heading">$</div>
+                            <div class="title is-5">0</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column">
+        <div class="box notification is-warning">
+            <div class="heading">Expenses (This Month)</div>
+            <div class="title">{{ expenseThisMonth }}</div>
+            <div class="level">
+                <div class="level-item">
+                    <div class="">
+                        <div class="heading">Top Category</div>
+                        <div class="title is-5">N/A</div>
+                    </div>
+                </div>
+                <div class="level-item">
+                    <div class="">
+                        <div class="heading">$</div>
+                        <div class="title is-5">0</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="column">
+            <div class="box notification is-info">
+                <div class="heading">Income (this year)</div>
+                <div class="title">{{ yearlyIncome }}</div>
+                <div class="level">
+                    <div class="level-item">
+                        <div class="">
+                            <div class="heading">Top Category</div>
+                            <div class="title is-5">N/A</div>
+                        </div>
+                    </div>
+                    <div class="level-item">
+                        <div class="">
+                            <div class="heading">$</div>
+                            <div class="title is-5">0</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <div class="box notification is-danger">
+                <div class="heading">Expenses (This year)</div>
+                <div class="title">{{ yearlyExpense }}</div>
+                <div class="level">
+                    <div class="level-item">
+                        <div class="">
+                            <div class="heading">Top Category</div>
+                            <div class="title is-5">N/A</div>
+                        </div>
+                    </div>
+                    <div class="level-item">
+                        <div class="">
+                            <div class="heading">$</div>
+                            <div class="title is-5">0</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    </div>
-    <div class="level-right">
-    <div class="level-item">
-        <button type="button" class="button is-small">
-            November 23, 2016 - Novermber 27, 2017
-        </button>
-    </div>
+
+    <div class="columns is-multiline">
+        <div class="column is-6">
+        <div class="panel">
+            <p class="panel-heading">
+                Expenses By Category (This Month)
+            </p>
+            <div class="panel-block">
+                <canvas id="chartpie" width="400" height="400"></canvas>
+            </div>
+        </div>
+        </div>
+        <div class="column is-6">
+        <div class="panel">
+            <p class="panel-heading">
+                Income vs Expense (This Year)
+            </p>
+            <div class="panel-block">
+                <canvas id="chartbar" width="400" height="400"></canvas>
+            </div>
+        </div>
+        </div>
+        <div class="column is-12">
+            <div class="panel">
+                <p class="panel-heading">
+                    Income/Expenses - This Year
+                </p>
+                <div class="panel-block">
+                    <canvas id="chartline" width="400" height="400"></canvas>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
-<div class="columns is-multiline">
-    <div class="column">
-    <div class="box notification is-primary">
-        <div class="heading">Income</div>
-        <div class="title">56,950</div>
-        <div class="level">
-        <div class="level-item">
-            <div class="">
-            <div class="heading">Sales $</div>
-            <div class="title is-5">250K</div>
-            </div>
-        </div>
-        <div class="level-item">
-            <div class="">
-            <div class="heading">Overall $</div>
-            <div class="title is-5">750K</div>
-            </div>
-        </div>
-        <div class="level-item">
-            <div class="">
-            <div class="heading">Sales %</div>
-            <div class="title is-5">25%</div>
-            </div>
-        </div>
-        </div>
-    </div>
-    </div>
-    <div class="column">
-    <div class="box notification is-warning">
-        <div class="heading">Revenue / Expenses</div>
-        <div class="title">55% / 45%</div>
-        <div class="level">
-        <div class="level-item">
-            <div class="">
-            <div class="heading">Rev Prod $</div>
-            <div class="title is-5">30%</div>
-            </div>
-        </div>
-        <div class="level-item">
-            <div class="">
-            <div class="heading">Rev Serv $</div>
-            <div class="title is-5">25%</div>
-            </div>
-        </div>
-        <div class="level-item">
-            <div class="">
-            <div class="heading">Exp %</div>
-            <div class="title is-5">45%</div>
-            </div>
-        </div>
-        </div>
-    </div>
-    </div>
-    <div class="column">
-    <div class="box notification is-info">
-        <div class="heading">Feedback Activity</div>
-        <div class="title">78% &uarr;</div>
-        <div class="level">
-        <div class="level-item">
-            <div class="">
-            <div class="heading">Pos</div>
-            <div class="title is-5">1560</div>
-            </div>
-        </div>
-        <div class="level-item">
-            <div class="">
-            <div class="heading">Neg</div>
-            <div class="title is-5">368</div>
-            </div>
-        </div>
-        <div class="level-item">
-            <div class="">
-            <div class="heading">Pos/Neg %</div>
-            <div class="title is-5">77% / 23%</div>
-            </div>
-        </div>
-        </div>
-    </div>
-    </div>
-    <div class="column">
-    <div class="box notification is-danger">
-        <div class="heading">Expenses</div>
-        <div class="title">75% / 25%</div>
-        <div class="level">
-        <div class="level-item">
-            <div class="">
-            <div class="heading">Orders $</div>
-            <div class="title is-5">425K</div>
-            </div>
-        </div>
-        <div class="level-item">
-            <div class="">
-            <div class="heading">Returns $</div>
-            <div class="title is-5">106K</div>
-            </div>
-        </div>
-        <div class="level-item">
-            <div class="">
-            <div class="heading">Success %</div>
-            <div class="title is-5">+ 28,5%</div>
-            </div>
-        </div>
-        </div>
-    </div>
-    </div>
-</div>
+@section extrajs
+{
+    <script type="text/javascript" src="~/lib/lodash/lodash.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.js"></script>
+    <script type="text/javascript" src="~/js/random-color.js"></script>
+    <script type="text/javascript" src="~/js/views/dashboard.js"></script>
+}
 
-<div class="columns is-multiline">
-    <div class="column is-6">
-    <div class="panel">
-        <p class="panel-heading">
-        Chart - Bar Style (Chart.js)
-        </p>
-        <div class="panel-block">
-        <canvas id="chartBar" width="400" height="400"></canvas>
-        </div>
-    </div>
-    </div>
-    <div class="column is-6">
-    <div class="panel">
-        <p class="panel-heading">
-        Chart - Line Style (Chart.js)
-        </p>
-        <div class="panel-block">
-        <canvas id="chartLine" width="400" height="400"></canvas>
-        </div>
-    </div>
-    </div>
-    <div class="column is-6">
-    <div class="panel">
-        <p class="panel-heading">
-        Chart - Doughnut Style (Chart.js)
-        </p>
-        <div class="panel-block">
-        <canvas id="chartDoughnut" width="400" height="400"></canvas>
-        </div>
-    </div>
-    </div>
-    <div class="column is-6">
-    <div class="panel">
-        <p class="panel-heading">
-        Chart - Scatter Style (Chart.js)
-        </p>
-        <div class="panel-block">
-        <canvas id="chartScatter" width="400" height="400"></canvas>
-        </div>
-    </div>
-    </div>
-</div>
+@section extrascripts
+{
+}
